chore: update to Java 21 (#389)